tools/crates/vendor/toml_edit/tests/fixtures/invalid/inline-table/duplicate-key-2.stderr
TOML parse error at line 1, column 11
  |
1 | table1 = { table2.dupe = 1, table2.dupe = 2 }
  |           ^
duplicate key `dupe`
